--- a/doctor/register-doctor.html
+++ b/doctor/register-doctor.html
@@ -1,60 +1,136 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./register-doctor.styles.css">
     <script src="./register-doctor.app.js" defer></script>
-    <title>Register doctor</title>
+    <title>Registro de Doctores</title>
 </head>
 
 <body>
-
     <div class="center-container">
-        <div class="nav"><img src="./assets/menu-icon.png" height="10px" width="10px" /></div>
         <div class="form-container">
             <div class="steps">
-                <div class="step step-completed">Paso 1</div>
-                <div class="step step-completed">Paso 2</div>
-                <div class="step">Paso 3</div>
+                <div class="step step-active" data-step="1">Paso 1</div>
+                <div class="step" data-step="2">Paso 2</div>
+                <div class="step" data-step="3">Paso 3</div>
             </div>
+
             <h2>Registro de Doctores</h2>
-            <form action="#" method="POST" enctype="multipart/form-data">
-                <div class="form-group">
-                    <label for="fullName">Nombre completo</label>
-                    <input type="text" id="fullName" name="fullName" placeholder="Dr. Juan Pérez" required>
-                </div>
-                <div class="form-group">
-                    <label for="specialty">Especialidad</label>
-                    <input type="text" id="specialty" name="specialty" placeholder="Cardiología, Pediatría..." required>
-                </div>
-                <div class="form-group">
-                    <label for="license">Número de licencia</label>
-                    <input type="text" id="license" name="license" placeholder="12345678" required>
-                </div>
-                <div class="form-group">
-                    <label for="phone">Teléfono</label>
-                    <input type="tel" id="phone" name="phone" placeholder="123-456-7890" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Correo electrónico</label>
-                    <input type="email" id="email" name="email" placeholder="correo@ejemplo.com">
-                </div>
 
-                <div class="input-file-container">
+            <form id="doctor-form">
+                <!-- Paso 1 -->
+                <div class="form-step" id="step-1">
                     <div class="form-group">
-                        <label for="photo" class="file-label">Seleccionar archivo</label>
-                        <input type="file" id="photo" name="photo" accept="image/*" required>
-                        <p id="file-name" class="file-name">Ningún archivo seleccionado</p>
+                        <label for="apellidoPaterno">Apellido Paterno</label>
+                        <input type="text" id="apellidoPaterno" required>
                     </div>
+                    <div class="form-group">
+                        <label for="apellidoMaterno">Apellido Materno</label>
+                        <input type="text" id="apellidoMaterno" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="nombre">Nombre</label>
+                        <input type="text" id="nombre" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="TELMedico">Número Telefónico</label>
+                        <input type="number" id="TELMedico" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Correo Electrónico</label>
+                        <input type="email" id="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="sexo">Sexo</label>
+                        <select id="sexo" required>
+            <option value="">Seleccione...</option>
+            <option value="Masculino">Masculino</option>
+            <option value="Femenino">Femenino</option>
+        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="fechaNacimiento">Fecha de Nacimiento</label>
+                        <input type="date" id="fechaNacimiento" required>
+                    </div>
+                    <button type="button" class="next-btn" onclick="nextStep(2)">Siguiente</button>
                 </div>
 
-                <button type="submit" class="submit-btn">Registrar</button>
+                <!-- Paso 2 -->
+                <div class="form-step" id="step-2" style="display: none;">
+                    <div class="form-group">
+                        <label for="calle">Calle</label>
+                        <input type="text" id="calle" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="colonia">Colonia</label>
+                        <input type="text" id="colonia" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="cp">Código Postal</label>
+                        <input type="number" id="cp" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="numExterior">Número Exterior</label>
+                        <input type="text" id="numExterior" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="numInterior">Número Interior (Opcional)</label>
+                        <input type="text" id="numInterior">
+                    </div>
+                    <div class="form-group">
+                        <label for="pais">País</label>
+                        <input type="text" id="pais" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="estado">Estado</label>
+                        <input type="text" id="estado" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="municipio">Municipio</label>
+                        <input type="text" id="municipio" required>
+                    </div>
+                    <button type="button" class="prev-btn" onclick="prevStep(1)">Atrás</button>
+                    <button type="button" class="next-btn" onclick="nextStep(3)">Siguiente</button>
+                </div>
+
+
+                <!-- Paso 3 -->
+                <div class="form-step" id="step-3" style="display: none;">
+                    <div class="form-group">
+                        <label for="curp">CURP</label>
+                        <input type="text" id="curp" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="rfc">RFC</label>
+                        <input type="text" id="rfc" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="numAfiliacion">Número de Afiliación</label>
+                        <input type="text" id="numAfiliacion" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="cedula">Cédula Profesional</label>
+                        <input type="text" id="cedula" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="especialidad">Especialidad</label>
+                        <input type="text" id="especialidad" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="photo" class="file-label">Subir Foto</label>
+                        <input type="file" id="photo" accept="image/*" required>
+                    </div>
+
+                    <button type="button" class="prev-btn" onclick="prevStep(2)">Atrás</button>
+                    <button type="submit" class="submit-btn">Registrar</button>
+                </div>
+
             </form>
         </div>
     </div>
-
 </body>
 
 </html>
