--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
     <link rel="stylesheet" href="login/login.styles.css">
     <script src="login/login.app.js" defer></script>
 </head>
+
 <body>
     <div class="login-container">
-        <h2>Iniciar sesión</h2> <!-- Utilizo h2 porque no es como tal el título principal de la página, es más una sección y h2 se utiliza para secciones.-->
-        <form id="loginForm" action="#" method="POST"> <!-- Utilizo el # en action porque aún no se define la URL del servidor a donde se enviarán los datos, se desconoce. Se define el método para especificar cómo se enviarán los datos al servidor.-->
+        <h2>Iniciar sesión</h2>
+        <!-- Utilizo h2 porque no es como tal el título principal de la página, es más una sección y h2 se utiliza para secciones.-->
+        <form id="loginForm" action="#" method="POST">
+            <!-- Utilizo el # en action porque aún no se define la URL del servidor a donde se enviarán los datos, se desconoce. Se define el método para especificar cómo se enviarán los datos al servidor.-->
             <div class="form-group">
                 <label for="email">Correo electrónico</label>
-                <input type="email" id="email" name="email" placeholder="Correo electrónico" required> <!--Checar name y id y type email-->
+                <input type="email" id="email" name="email" placeholder="Correo electrónico" required>
+                <!--Checar name y id y type email-->
             </div>
             <div class="form-group">
                 <label for="password">Contraseña</label>
@@ -22,10 +26,11 @@
             </div>
 
             <button type="submit" name="login">Ingresar</button>
-        </form>   
+        </form>
     </div>
     <div class="login-footer">
-        <p>© 2025 Life Medic. Todos los derechos reservados.</p>
+        <p>© 2025 MedicLife.</p>
     </div>
 </body>
+
 </html>
